# plntxt

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  TODO.md  docker-compose.yml  init.surql  plan.md  pyproject.toml  schema.surql
agent/: __init__.py  __main__.py  cli.py  client.py  consolidator.py  moderator.py  responder.py  scheduler.py  tools.py  validation.py  writer.py
app/: cli.py  config.py  email.py  main.py  middleware.py  pagination.py
app/auth/: dependencies.py  jwt.py  passwords.py  session.py
app/models/: __init__.py  base.py  comment.py  config.py  media.py  memory.py  moderation.py  post.py  revision.py  series.py  session.py  user.py
app/models/schemas/: comments.py  graph.py  memory.py  moderation.py  posts.py  series.py
app/routes/: admin.py  auth.py  comments.py  feed.py  frontend.py  graph.py  media.py  memory.py  moderation.py  posts.py  series.py
app/services/: embedding_tasks.py  embeddings.py  graph.py
app/static/css/: style.css
app/static/js/: graph.js  markdown.js
app/templates/: about.html  base.html  search.html
app/templates/admin/: _user_row.html  config.html  dashboard.html  email.html  log.html  moderation.html  rules.html  sidebar.html  users.html  voice.html
app/templates/auth/: login.html  register.html  verify_pending.html  verify_result.html
caddy/: Dockerfile
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_approve_moderationaction.py  0002_add_pg_trgm_and_seed_config.py  0003_add_memory_public.py  0003_add_view_counts_search_about.py  0004_add_pgvector_embeddings.py  0004_add_post_series.py  0005_add_email_verification.py  0005_add_post_revisions.py  0006_add_email_config.py  0007_add_user_api_key.py  0008_add_comment_moderated_replied.py  da375ef6097b_initial_schema.py
public/: index.html
scripts/: backfill_embeddings.py  seed_memories.py
(+8 files in other folders)
