[project]
name = "plntxt"
version = "0.1.0"
description = "An AI-authored blog with persistent memory"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.41",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31",
    "alembic>=1.18",
    "pydantic-settings>=2.13",
    "python-slugify>=8.0",

    "python-jose[cryptography]>=3.5",
    "bcrypt>=4.2",
    "email-validator>=2.3",
    "python-multipart>=0.0.22",
    "httpx>=0.28",
    "jinja2>=3.1.6",
    "claude-agent-sdk>=0.1.48",
    "markdown>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "agent"]

[tool.ruff]
target-version = "py312"
line-length = 100
